--- a/ML_day2/LSTM_IMDB.ipynb
+++ b/ML_day2/LSTM_IMDB.ipynb
@@ -20,8 +20,8 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras.layers import LSTM\n",
-    "from keras.layers.embeddings import Embedding\n",
-    "from keras.preprocessing import sequence\n",
+    "from keras.layers import Embedding\n",
+    "from keras.utils import pad_sequences\n",
     "# fix random seed for reproducibility\n",
     "np.random.seed(7)"
    ]
