--- a/ML_day2/LSTM_IMDB.ipynb
+++ b/ML_day2/LSTM_IMDB.ipynb
@@ -88,8 +88,8 @@
    "outputs": [],
    "source": [
     "max_review_length = 128\n",
-    "X_train = sequence.pad_sequences(X_train, maxlen=max_review_length)\n",
-    "X_test = sequence.pad_sequences(X_test, maxlen=max_review_length)"
+    "X_train = pad_sequences(X_train, maxlen=max_review_length)\n",
+    "X_test = pad_sequences(X_test, maxlen=max_review_length)"
    ]
   },
   {
