--- a/ML_day2/CNN.ipynb
+++ b/ML_day2/CNN.ipynb
@@ -22,7 +22,7 @@
     "from keras import backend as K\n",
     "\n",
     "batch_size = 128\n",
-    "num_classes = 10\n",
+    "num_classes = ?\n",
     "epochs = 5"
    ]
   },
@@ -119,7 +119,7 @@
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(num_classes, activation='softmax'))\n",
+    "model.add(Dense(num_classes, activation='?'))\n",
     "\n",
     "model.compile(loss=keras.losses.categorical_crossentropy, optimizer='adam', metrics=['accuracy'])\n",
     "model.summary()"
