--- a/ML_day2/CNN.ipynb
+++ b/ML_day2/CNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-    "Question 1: change the ? to the correct answer to make the code run\n",
+    "Question 1: change the ? to the correct answer to make the code run.\n",
     "Question 2: what is the test accuracy if you change batch_size to 256, number of epochs to 10?\n",
     "Question 3: what is the most common classification error? Please conduct error analysis of your prediction results.\n",
       "Using TensorFlow backend.\n"
