--- a/ML_day2/MLP.ipynb
+++ b/ML_day2/MLP.ipynb
@@ -9,6 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Question 1: what's the accuracy and running time if you change nb_hidden = 128 and add another MLP dense layer with nb_hidden = 128? \n"
       "Using TensorFlow backend.\n"
      ]
     }
