--- a/ML_day2/MLP.ipynb
+++ b/ML_day2/MLP.ipynb
@@ -18,7 +18,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Activation, Dropout\n",
     "from keras.datasets import mnist\n",
-    "from keras.utils import np_utils"
+    "import keras.utils as utils"
    ]
   },
   {
@@ -48,8 +48,8 @@
     "X_test = X_test.astype('float32')\n",
     "X_train /= 255\n",
     "X_test /= 255\n",
-    "Y_train = np_utils.to_categorical(y_train, nb_classes)\n",
-    "Y_test = np_utils.to_categorical(y_test, nb_classes)"
+    "Y_train = utils.to_categorical(y_train, nb_classes)\n",
+    "Y_test = utils.to_categorical(y_test, nb_classes)"
    ]
   },
   {
