--- a/ML_day2/LSTM.ipynb
+++ b/ML_day2/LSTM.ipynb
@@ -17,7 +17,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import LSTM, Dense,Dropout\n",
     "from keras.datasets import mnist\n",
-    "from keras.utils import np_utils\n"
+    "import keras.utils as np_utils\n"
    ]
   },
   {
