--- a/ML_day2/LSTM_IMDB.ipynb
+++ b/ML_day2/LSTM_IMDB.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "#Question 1: What's the accuracy if you use the 2000 and 500 most frequent words respectively? The other parameters remain the same.\n",
-"#Question 2: What's the accuracy if you set max_review_length to 50 and 256 respectively? The other parameters remain the same.\n"
-"#Question 3: What's the accuracy if you set embedding_vecor_length to 10 and 64 respectively? The other parameters remain the same.\n"
+"#Question 2: What's the accuracy if you set max_review_length to 50 and 256 respectively? The other parameters remain the same.\n",
+"#Question 3: What's the accuracy if you set embedding_vecor_length to 10 and 64 respectively? The other parameters remain the same.\n",
       "Using TensorFlow backend.\n"
      ]
     }
