--- a/ML_day2/LSTM.ipynb
+++ b/ML_day2/LSTM.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-"Question 1: What's the accuracy if you change nb_lstm to 32 and 128 respectively?",
+"Question 1: What's the accuracy if you change nb_lstm to 32 and 128 respectively?\n",
       "Using TensorFlow backend.\n"
      ]
     }
